# QSwitch

./: .gitignore  CMakeLists.txt  QSwitch.cpp  QSwitch.h  README.md  main.cpp  main.py  qswitch.py
